apps/gork/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gork
  namespace: gork
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gork.thiemo.click`)
      kind: Rule
      services:
        - name: gork-frontend-service
          port: 3000
    - match: Host(`gork.thiemo.click`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: gork-backend-service
          port: 8080
  tls:
    secretName: gork-tls
